tests/profile/error/property/wrongtype_value.profile
{
  "version": { "major": 1, "minor": 0 },
  "properties": [
    {
      "type": "setPropertyValue",
      "name": "property_name_1",
      "value": 1.0
    }
  ]
}
